Mirebalais #773 - Integration test for new/old concepts in mds packages